# threedy

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: generate-requirements.yaml  release.yml
modules/: compute.py
src/threedy/: main.py
src/threedy/components/: commandbar.py  sidebar.py  tabview.py  terminal.py
src/threedy/interface/: commandbar.py  sidebar.py  tabview.py  terminal.py
src/threedy/modules/: compute.py  dialogs.py  process_gcode.py  regex_switch.py  settings.py
src/threedy/resources/: test-gcode.gcode
src/threedy/temp/: compute  main
tmp/: gcode-processor  tabview-switches
utils/: APtE-config.json
