[project]
name = "threedy"
version = "0.0.1"
authors = [{ name = "Stefano Serioli", email = "stefano.serioli@outlook.com" }]
description = "A GUI toolkit for manipulating python files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OverNight3D/threedy"
"Bug Tracker" = "https://github.com/OverNight3D/threedy/issues/new/choose"

